fix flicker

--- a/coverage.less
+++ b/coverage.less
@@ -1,7 +1,7 @@
 /* CSS declarations go here */
 .avgrund-contents {
   	.block {
-    	background-color: rgb(255, 255, 255);
+    	background-color: white;
     	font-family: 'Helvetica Neue', Arial, sans-serif;
     	border: 2px solid black;
     	padding-top: 15px;
@@ -35,6 +35,9 @@
     }
     .Fulltext {
       margin: 10px
+    }
+    .glow {
+      -webkit-animation:myfirst 3s;
     }
 }
 #tweet {
@@ -135,6 +138,13 @@ body {
   h1 {
     text-align: center;
   }
+}
+
+@-webkit-keyframes myfirst
+{
+  0%   {background:white;}
+  50% {background:Palegreen;}
+  100% {background:white;}
 }
 
 #container {
